--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
 
-        <div class="content">
+        <!-- <div class="content">
             <div class="method">
                 <div class="method-sub">
                     <img src="./Assets/img/icon-flower.png" alt="" class="sub-img">
@@ -87,7 +87,7 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
 </body>
