--- a/Html/pages.html
+++ b/Html/pages.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="nav-option">
                     <ul>
-                        <li><a href="http://">Home</a></li>
+                        <li><a href="/index.html">Home</a></li>
                         <li><a href="../Html/pages.html" target="_blank">Pages</a></li>
                         <li><a href="http://">About</a></li>
                         <li><a href="http://">Shop</a></li>
@@ -55,7 +55,7 @@
                     </div>
                 </div>
                 <div class="method-card grid__row">
-                    <div href="./Html/pages.html" target="_blank" class="mt-card">
+                    <div class="mt-card grid__col-4">
                         <div class="card-outside--1">
                             <div class="card-inside">
                                 <h3 class="card-tlt">Mineral Salt Scrub</h3>
@@ -67,7 +67,7 @@
                         </div>
                     </div>
 
-                    <div href="./Html/pages.html" target="_blank" class="mt-card">
+                    <div class="mt-card grid__col-4">
                         <div class="card-outside--2">
                             <div class="card-inside">
                                 <h3 class="card-tlt">MGeothermal Spa</h3>
@@ -80,7 +80,7 @@
                         </div>
                     </div>
 
-                    <div href="./Html/pages.html" target="_blank" class="mt-card">
+                    <div class="mt-card grid__col-4">
                         <div class="card-outside--3">
                             <div class="card-inside">
                                 <h3 class="card-tlt">Mineral Baths</h3>
@@ -93,7 +93,7 @@
                         </div>
                     </div>
 
-                    <div href="./Html/pages.html" target="_blank" class="mt-card">
+                    <div class="mt-card grid__col-4">
                         <div class="card-outside--4">
                             <div class="card-inside">
                                 <h3 class="card-tlt">Mineral Salt Scrub</h3>
@@ -105,7 +105,7 @@
                         </div>
                     </div>
 
-                    <div href="./Html/pages.html" target="_blank" class="mt-card">
+                    <div class="mt-card grid__col-4">
                         <div class="card-outside--5">
                             <div class="card-inside">
                                 <h3 class="card-tlt">Mineral Salt Scrub</h3>
@@ -117,7 +117,7 @@
                         </div>
                     </div>
 
-                    <div href="./Html/pages.html" target="_blank" class="mt-card">
+                    <div class="mt-card grid__col-4">
                         <div class="card-outside--6">
                             <div class="card-inside">
                                 <h3 class="card-tlt">Mineral Salt Scrub</h3>
@@ -129,7 +129,7 @@
                         </div>
                     </div>
 
-                    <div href="./Html/pages.html" target="_blank" class="mt-card">
+                    <div class="mt-card grid__col-4">
                         <div class="card-outside--7">
                             <div class="card-inside">
                                 <h3 class="card-tlt">Mineral Salt Scrub</h3>
@@ -141,7 +141,7 @@
                         </div>
                     </div>
 
-                    <div href="./Html/pages.html" target="_blank" class="mt-card">
+                    <div class="mt-card grid__col-4">
                         <div class="card-outside--8">
                             <div class="card-inside">
                                 <h3 class="card-tlt">Mineral Salt Scrub</h3>
@@ -153,7 +153,7 @@
                         </div>
                     </div>
 
-                    <div href="./Html/pages.html" target="_blank" class="mt-card">
+                    <div class="mt-card grid__col-4">
                         <div class="card-outside--9">
                             <div class="card-inside">
                                 <h3 class="card-tlt">Mineral Salt Scrub</h3>
