A Place of True Splendor

--- a/index.html
+++ b/index.html
@@ -159,6 +159,39 @@
                 </div>
             </div>
 
+            <div class="parallax">
+                <div class="parallax-content">
+                    <h5 class="parallax-tlt">A Place of True Splendor</h5>
+                    <p class="parallax-text">Vide epicurei repudiare qui eu. Quo ea omnium voluptaria dolorum, mandamus
+                        vitae comprehensam nec eu option.</p>
+                    <a href="" class="parallax-btn btn">Book Now</a>
+                </div>
+            </div>
+
+            <div style="flex-direction: row-reverse;" class="health-care grid__row">
+                <div class="hc-box grid__col-6">
+                    <img class="hc-img" src="./Assets/img/hc-img-2.jpg" alt="">
+                </div>
+                <div class="hc-content grid__col-6">
+                    <div class="hc-sub">
+                        <h5 class="hc-sub-tlt">EXTRAORDINARY
+                        </h5>
+                    </div>
+                    <div class="hc-content-text">
+                        <h3 class="hc-tlt">Your Wellbeing
+                        </h3>
+                        <p class="hc-text">Vix te soleat eirmod civibus. Ius ad autem dicam exerci, sed et erremasc
+                            simul phaedrum, ex latine minimum deleniti has.
+                            No mei case assenna. Mea nobis putent discere no. Duo ea homero senserit, fugit quando
+                            intellegat dicam no his ullum.</p>
+                        <ul class="hc-text">
+                            <li>Entrance to the Blue Lagoon</li>
+                            <li>Silica mud mask (face and body)</li>
+                            <li>Use of soft towel and bathrobe</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
