--- a/Html/pages.html
+++ b/Html/pages.html
@@ -23,8 +23,8 @@
                 </div>
                 <div class="nav-option">
                     <ul>
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="../Html/pages.html" target="_blank">Pages</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../Html/pages.html">Pages</a></li>
                         <li><a href="http://">About</a></li>
                         <li><a href="http://">Shop</a></li>
                         <li><a href="http://">Landing</a></li>
@@ -46,7 +46,7 @@
         <div class="content">
             <div class="method">
                 <div class="method-sub">
-                    <img src="./Assets/img/icon-flower.png" alt="" class="sub-img">
+                    <img src="../Assets/img/icon-flower.png" alt="" class="sub-img">
                     <div class="sub-tlt">
                         <h2>Beauty and Spa Center</h2>
                         <p>Qui dolore perferendis. Saepe sed accusantium aut sint voluptas. Deleniti maxime aut
