update page index created booking

--- a/Html/booking.htm
+++ b/Html/booking.htm
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../Css/base.css">
     <link rel="stylesheet" href="../Css/index.css">
     <link rel="stylesheet" href="../Css/pages.css">
+    <link rel="stylesheet" href="../Css/booking.css">
     <link rel="shortcut icon" href="../Assets/img/logo.png" type="image/x-icon">
 
     <title>Sena Spa</title>
@@ -29,7 +30,7 @@
                         <li><a href="http://">Shop</a></li>
                         <li><a href="http://">Landing</a></li>
                     </ul>
-                    <button class="nav-booking btn"><a href="./booking.htm">Book Now</a></button>
+                    <button class="nav-booking btn">Book Now</button>
                 </div>
             </div>
             <div class="slogan">
@@ -45,13 +46,30 @@
 
         <div class="content">
             <div class="method">
-                <div class="method-sub">
-                    <img src="../Assets/img/icon-flower.png" alt="" class="sub-img">
-                    <div class="sub-tlt">
-                        <h2>Beauty and Spa Center</h2>
-                        <p>Qui dolore perferendis. Saepe sed accusantium aut sint voluptas. Deleniti maxime aut
-                            veritatis rerum. Illo quia vel nesciunt suscipit. Ratione ab necessitatibus consequatur sed
-                            nulla. Aut officia ut.
+                <div class="booking grid__row">
+                    <form action="" class="bk-form grid__col-4">
+                        <h5 class="form-tlt">Book an Appointment</h5>
+                        <input class="form-input" type="text" name="" id="" placeholder="Name">
+                        <input class="form-input" type="email" name="" id="" placeholder="Email address">
+                        <input class="form-input" type="text" name="" id="" placeholder="Type of service">
+                        <input class="form-input" type="date" name="" id="" placeholder="Preferred date">
+                        <input type="button" value="Make an appointment" class="btn form-input-btn">
+                    </form>
+                    <div class="bk-info grid__col-8">
+                        <h5 class="bk-info-tlt">Spa center</h5>
+                        <p class="bk-info-text">Illo omnis vel qui. Reprehenderit nesciunt aut rerum in odio sequi.
+                            Reprehenderit expedita saepe veritatis aliquid. Expedita dicta hic sunt vel sunt vero rerum
+                            nobis.Fuga necessitatibus molestiae nam aut est distinctio odio. Est autem aut at placeat
+                            laudantium ad et omnis. Molestias in enim aut vero necessitatibus cupiditate magni voluptas
+                            quaerat. Aliquam consequatur facilis consequuntur eius ab voluptatem aut voluptatem.
+                            Voluptate
+                            laborum veritatis.</p>
+                        <ul class="bk-info-text">
+                            <li>Eum facer an dolores pro cetero</li>
+                            <li>Pri eros democritum ad inciderint</li>
+                            <li>Ad qui graece propriae ponder</li>
+                            <li>Hinc latine sed iriure aperiri</li>
+                        </ul>
                     </div>
                 </div>
                 <div class="method-card grid__row">
@@ -165,6 +183,16 @@
                         </div>
                     </div>
 
+                </div>
+
+                <div class="method-sub">
+                    <img src="../Assets/img/icon-flower.png" alt="" class="sub-img">
+                    <div class="sub-tlt">
+                        <h2>Beauty and Spa Center</h2>
+                        <p>Qui dolore perferendis. Saepe sed accusantium aut sint voluptas. Deleniti maxime aut
+                            veritatis rerum. Illo quia vel nesciunt suscipit. Ratione ab necessitatibus consequatur sed
+                            nulla. Aut officia ut.
+                    </div>
                 </div>
             </div>
         </div>
