--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <li><a href="http://">Shop</a></li>
                         <li><a href="http://">Landing</a></li>
                     </ul>
-                    <button class="nav-booking btn">Book Now</button>
+                    <button class="nav-booking btn"><a href="./Html/booking.htm">Book Now</a></button>
                 </div>
             </div>
             <div class="slogan">
