--- a/Html/about.htm
+++ b/Html/about.htm
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Css/base.css">
-    <link rel="stylesheet" href="./Css/index.css">
-    <link rel="shortcut icon" href="./Assets/img/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="../Css/base.css">
+    <link rel="stylesheet" href="../Css/index.css">
+    <link rel="stylesheet" href="../Css/about.css">
+    <link rel="shortcut icon" href="../Assets/img/logo.png" type="image/x-icon">
 
     <title>Sena Spa</title>
 </head>
@@ -17,80 +18,32 @@
         <div class="header">
             <div class="header_nav">
                 <div class="nav-logo">
-                    <img src="./Assets/img/logo.png" alt="" class="nav-logo-img">
+                    <img src="../Assets/img/logo.png" alt="" class="nav-logo-img">
                     <h3 class="nav-logo-tlt">Sena Spa</h3>
                 </div>
                 <div class="nav-option">
                     <ul>
-                        <li><a href="./index.html">Home</a></li>
-                        <li><a href="./Html/pages.html">Pages</a></li>
-                        <li><a href="./Html/about.htm">About</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="../Html/pages.html">Pages</a></li>
+                        <li><a href="../Html/about.htm">About</a></li>
                         <li><a href="http://">Shop</a></li>
                         <li><a href="http://">Landing</a></li>
                     </ul>
-                    <button class="nav-booking btn"><a href="./Html/booking.htm">Book Now</a></button>
+                    <button class="nav-booking btn"><a href="../Html/booking.htm">Book Now</a></button>
                 </div>
             </div>
             <div class="slogan">
-                <span class="intro-tlt">Your beauty truly matters to us <img src="./Assets/img/icon-slogan.png" alt="">
+                <span class="intro-tlt">Your beauty truly matters to us <img src="../Assets/img/icon-slogan.png" alt="">
                     and we know you’ll love<i>your stay</i>here at
-                    Reina, a place of <img src="./Assets/img/icon-slogan.png" alt=""> splendor made for you.</span>
+                    Reina, a place of <img src="../Assets/img/icon-slogan.png" alt=""> splendor made for you.</span>
 
                 <div>
-                    <button class="intro-btn btn"><a href="./Html/about.htm">View more</a></button>
+                    <button class="intro-btn btn"><a href="../Html/about.htm">View more</a></button>
                 </div>
             </div>
         </div>
-
         <div class="content">
-            <div class="method">
-                <div class="method-sub">
-                    <img src="./Assets/img/icon-flower.png" alt="" class="sub-img">
-                    <div class="sub-tlt">
-                        <h2>Beauty and Spa Center</h2>
-                        <p>Qui dolore perferendis. Saepe sed accusantium aut sint voluptas. Deleniti maxime aut
-                            veritatis rerum. Illo quia vel nesciunt suscipit. Ratione ab necessitatibus consequatur sed
-                            nulla. Aut officia ut.
-                    </div>
-                </div>
-                <div class="method-card">
-                    <a href="./Html/pages.html" class="mt-card">
-                        <div class="card-outside--1">
-                            <div class="card-inside">
-                                <h3 class="card-tlt">Mineral Salt Scrub</h3>
-                                <p class="card-text">Assumenda consequuntur sunt in. Repudiandae temporibus dolor qui
-                                    animi dolorum magni. </p>
-                                <button class="card-btn">Read more</button>
-                            </div>
-                        </div>
-                    </a>
-
-                    <a href="./Html/pages.html" class="mt-card">
-                        <div class="card-outside--2">
-                            <div class="card-inside">
-                                <h3 class="card-tlt">MGeothermal Spa</h3>
-                                <p class="card-text">Assumenda consequuntur sunt in. Repudiandae temporibus dolor qui
-                                    animi dolorum magni.
-                                    Nostrum voluptatibus voluptatum. </p>
-                                <button class="card-btn">Read more</button>
-                            </div>
-                        </div>
-                    </a>
-
-                    <a href="./Html/pages.html" class="mt-card">
-                        <div class="card-outside--3">
-                            <div class="card-inside">
-                                <h3 class="card-tlt">Mineral Baths</h3>
-                                <p class="card-text">Assumenda consequuntur sunt in. Repudiandae temporibus dolor qui
-                                    animi dolorum magni.
-                                    Nostrum voluptatibus voluptatum.</p>
-                                <button class="card-btn">Read more</button>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
+            <h5 class="cnt-tlt">Welcome to Spa center</h5>
             <div class="price_list grid__row">
                 <div class="pl-content grid__col-3">
                     <img class="pl-icon"
@@ -98,10 +51,6 @@
                     <h5 class="pl-tlt">
                         <a href="">Finnish Sauna</a>
                     </h5>
-                    <a href="">
-                        <p class="pl-text">Quia enim vero eligendi eum aut nam soluta vel qui. In id laboriosam delectus
-                            amet autem et. In id laboriosam delectus amet autem et.</p>
-                    </a>
                 </div>
                 <div class="pl-content grid__col-3">
                     <img class="pl-icon"
@@ -109,11 +58,6 @@
                     <h5 class="pl-tlt">
                         <a href="">Daily Program</a>
                     </h5>
-                    <a href="">
-                        <p class="pl-text">Quisquam quibusdam dolorem corporis quas earum illum dolores voluptatem. Est
-                            ratione voluptas nihil eum non ut eveniet. Vel aliquam sit voluptate voluptate maiores fugit
-                            aut.</p>
-                    </a>
                 </div>
                 <div class="pl-content grid__col-3">
                     <img class="pl-icon"
@@ -121,10 +65,6 @@
                     <h5 class="pl-tlt">
                         <a href="">Volcanic Stones</a>
                     </h5>
-                    <a href="">
-                        <p class="pl-text">Quia enim vero eligendi eum aut nam soluta vel qui. In id laboriosam delectus
-                            amet autem et. In id laboriosam delectus amet autem et.</p>
-                    </a>
                 </div>
                 <div class="pl-content grid__col-3">
                     <img class="pl-icon"
@@ -132,45 +72,32 @@
                     <h5 class="pl-tlt">
                         <a href="">Scrub Massage</a>
                     </h5>
-                    <a href="">
-                        <p class="pl-text">Quia enim vero eligendi eum aut nam soluta vel qui. In id laboriosam delectus
-                            amet autem et. In id laboriosam delectus amet autem et.</p>
-                    </a>
                 </div>
             </div>
 
             <div class="health-care grid__row">
                 <div class="hc-box grid__col-6">
-                    <img class="hc-img" src="./Assets/img/hc-img.jpg" alt="">
+                    <img class="hc-img" src="../Assets/img/hc-img.jpg" alt="">
                 </div>
                 <div class="hc-content grid__col-6">
                     <div class="hc-sub">
                         <h5 class="hc-sub-tlt">UNFORGETTABLE</h5>
                     </div>
                     <div class="hc-content-text">
-                        <h3 class="hc-tlt">Wellness & Spa</h3>
+                        <h3 class="hc-tlt">Spa center</h3>
                         <p class="hc-text">Vix te soleat eirmod civibus. Ius ad autem dicam exerci, sed et erremasc
                             simul
                             phaedrum, ex latine minimum deleniti has.
                             No mei case assenna. Mea nobis putent discere no. Duo ea homero senserit, fugit quando
                             intellegat dicam no his ullum.</p>
-                        <a href="./Html/booking.htm" class="hc-btn btn">Book now</a>
+                        <a href="../Html/booking.htm" class="hc-btn btn">Book now</a>
                     </div>
-                </div>
-            </div>
-
-            <div class="parallax">
-                <div class="parallax-content">
-                    <h5 class="parallax-tlt">A Place of True Splendor</h5>
-                    <p class="parallax-text">Vide epicurei repudiare qui eu. Quo ea omnium voluptaria dolorum, mandamus
-                        vitae comprehensam nec eu option.</p>
-                    <a href="" class="parallax-btn btn">Book Now</a>
                 </div>
             </div>
 
             <div style="flex-direction: row-reverse;" class="health-care grid__row">
                 <div class="hc-box grid__col-6">
-                    <img class="hc-img" src="./Assets/img/hc-img-2.jpg" alt="">
+                    <img class="hc-img" src="../Assets/img/hc-img-2.jpg" alt="">
                 </div>
                 <div class="hc-content grid__col-6">
                     <div class="hc-sub">
@@ -178,8 +105,7 @@
                         </h5>
                     </div>
                     <div class="hc-content-text">
-                        <h3 class="hc-tlt">Your Wellbeing
-                        </h3>
+                        <h3 class="hc-tlt">Spa center</h3>
                         <p class="hc-text">Vix te soleat eirmod civibus. Ius ad autem dicam exerci, sed et erremasc
                             simul phaedrum, ex latine minimum deleniti has.
                             No mei case assenna. Mea nobis putent discere no. Duo ea homero senserit, fugit quando
@@ -193,82 +119,15 @@
                 </div>
             </div>
 
-            <div class="menu grid__row">
-                <div class=" grid__col-6">
-                    <div class="menu-item">
-                        <div class=" menu-content">
-                            <h5 class="menu-ctn-tlt">Aroma therapy</h5>
-                            <span class="inline"></span>
-                            <span class="f-p">
-                                <span class="from">from</span>
-                                <span class="price-number">$48</span>
-                            </span>
-                        </div>
-                        <p class="menu-cnt-text">Possimus ea qui architecto quia explicabo eos.</p>
-                    </div>
+            <h5 class="ins-tlt">INSTAGRAM POSTS</h5>
+            <div class="instagram grid__row">
+                <img src="../Assets/img/ins-1.jpg" alt="" class="ins-img grid__col-2">
+                <img src="../Assets/img/ins-2.jpg" alt="" class="ins-img grid__col-2">
+                <img src="../Assets/img/ins-3.jpg" alt="" class="ins-img grid__col-2">
+                <img src="../Assets/img/ins-4.jpg" alt="" class="ins-img grid__col-2">
+                <img src="../Assets/img/ins-5.jpg" alt="" class="ins-img grid__col-2">
+                <img src="../Assets/img/ins-6.jpg" alt="" class="ins-img grid__col-2">
 
-                    <div class="menu-item">
-                        <div class=" menu-content">
-                            <h5 class="menu-ctn-tlt">Geothermal spa</h5>
-                            <span class="inline"></span>
-                            <span class="f-p">
-                                <span class="from">from</span>
-                                <span class="price-number">$32</span>
-                            </span>
-                        </div>
-                        <p class="menu-cnt-text">Ut eos ea consectetur dolorem aliquam occaecati quos.</p>
-                    </div>
-
-                    <div class="menu-item">
-                        <div class=" menu-content">
-                            <h5 class="menu-ctn-tlt">Finnish sauna</h5>
-                            <span class="inline"></span>
-                            <span class="f-p">
-                                <span class="from">from</span>
-                                <span class="price-number">$50</span>
-                            </span>
-                        </div>
-                        <p class="menu-cnt-text">Nihil alias officiis ratione veritatis dignissimos delectus in.</p>
-                    </div>
-                </div>
-
-                <div class="grid__col-6">
-                    <div class="menu-item">
-                        <div class=" menu-content">
-                            <h5 class="menu-ctn-tlt">Full body massage</h5>
-                            <span class="inline"></span>
-                            <span class="f-p">
-                                <span class="from">from</span>
-                                <span class="price-number">$37</span>
-                            </span>
-                        </div>
-                        <p class="menu-cnt-text">Possimus ea qui architecto quia explicabo eos.</p>
-                    </div>
-
-                    <div class="menu-item">
-                        <div class=" menu-content">
-                            <h5 class="menu-ctn-tlt">Aroma therapy</h5>
-                            <span class="inline"></span>
-                            <span class="f-p">
-                                <span class="from">from</span>
-                                <span class="price-number">$22</span>
-                            </span>
-                        </div>
-                        <p class="menu-cnt-text">Ut eos ea consectetur dolorem aliquam occaecati quos.</p>
-                    </div>
-
-                    <div class="menu-item">
-                        <div class=" menu-content">
-                            <h5 class="menu-ctn-tlt">Sauna relax</h5>
-                            <span class="inline"></span>
-                            <span class="f-p">
-                                <span class="from">from</span>
-                                <span class="price-number">$40</span>
-                            </span>
-                        </div>
-                        <p class="menu-cnt-text">Nihil alias officiis ratione veritatis dignissimos delectus in.</p>
-                    </div>
-                </div>
             </div>
         </div>
 
