--- a/Html/pages.html
+++ b/Html/pages.html
@@ -25,11 +25,11 @@
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../Html/pages.html">Pages</a></li>
-                        <li><a href="http://">About</a></li>
+                        <li><a href="../Html/about.htm">About</a></li>
                         <li><a href="http://">Shop</a></li>
                         <li><a href="http://">Landing</a></li>
                     </ul>
-                    <button class="nav-booking btn"><a href="./booking.htm">Book Now</a></button>
+                    <button class="nav-booking btn"><a href="../Html/booking.htm">Book Now</a></button>
                 </div>
             </div>
             <div class="slogan">
@@ -38,7 +38,7 @@
                     Reina, a place of <img src="../Assets/img/icon-slogan.png" alt=""> splendor made for you.</span>
 
                 <div>
-                    <button class="intro-btn btn">View more</button>
+                    <button class="intro-btn btn"><a href="../Html/about.htm">View more</a></button>
                 </div>
             </div>
         </div>
