setup create shop page

--- a/Html/about.htm
+++ b/Html/about.htm
@@ -26,7 +26,7 @@
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../Html/pages.html">Pages</a></li>
                         <li><a href="../Html/about.htm">About</a></li>
-                        <li><a href="http://">Shop</a></li>
+                        <li><a href="../Html/shop.htm">Shop</a></li>
                         <li><a href="../Html/blog.htm">Blog</a></li>
                     </ul>
                     <button class="nav-booking btn"><a href="../Html/booking.htm">Book Now</a></button>
