--- a/Html/shop.htm
+++ b/Html/shop.htm
@@ -47,11 +47,84 @@
         <div class="content grid__row">
             <div class="content-header">
                 <img src="../Assets/img/icon-flower.png" alt="" class="sub-img">
-                <h5 class="cnt-tlt">Blog</h5>
+                <h5 class="cnt-tlt">Shop</h5>
             </div>
             <div class="grid__col-8">
 
-
+                <div class="grid__row">
+                    <div class="product grid__col-4">
+                        <img src="../Assets/img/product-12.jpg" alt="" class="product-img">
+                        <span class="icon-sale">Sale</span>
+                        <h5 class="product-tlt">Hand wash</h5>
+                        <span class="product-price sale">$74.00</span>
+                        <span class="product-price">$56.00 </span>
+                    </div>
+                    <div class="product grid__col-4">
+                        <img src="../Assets/img/product-11.jpg" alt="" class="product-img">
+                        <h5 class="product-tlt">Body brush</h5>
+                        <span class="product-price">$30.00 </span>
+                    </div>
+                    <div class="product grid__col-4">
+                        <img src="../Assets/img/product-10.jpg" alt="" class="product-img">
+                        <span class="icon-sale">Sale</span>
+                        <h5 class="product-tlt">Face cream</h5>
+                        <span class="product-price sale">$56.00</span>
+                        <span class="product-price">$40.00 </span>
+                    </div>
+                    <div class="product grid__col-4">
+                        <img src="../Assets/img/product-9.jpg" alt="" class="product-img">
+                        <h5 class="product-tlt">Natural soap</h5>
+                        <span class="product-price">$43.00 </span>
+                    </div>
+                    <div class="product grid__col-4">
+                        <img src="../Assets/img/product-8.jpg" alt="" class="product-img">
+                        <span class="icon-sale">Sale</span>
+                        <h5 class="product-tlt">Almond oil</h5>
+                        <span class="product-price sale">$38.00</span>
+                        <span class="product-price">$32.00 </span>
+                    </div>
+                    <div class="product grid__col-4">
+                        <img src="../Assets/img/product-7.jpg" alt="" class="product-img">
+                        <h5 class="product-tlt">Oily skin</h5>
+                        <span class="product-price">$35.00 </span>
+                    </div>
+                    <div class="product grid__col-4">
+                        <img src="../Assets/img/product-6.jpg" alt="" class="product-img">
+                        <h5 class="product-tlt">Jojoba oil</h5>
+                        <span class="product-price">$65.00 </span>
+                    </div>
+                    <div class="product grid__col-4">
+                        <img src="../Assets/img/product-5.jpg" alt="" class="product-img">
+                        <span class="icon-sale">Sale</span>
+                        <h5 class="product-tlt">Body milk</h5>
+                        <span class="product-price sale">$82.00</span>
+                        <span class="product-price">$67.00 </span>
+                    </div>
+                    <div class="product grid__col-4">
+                        <img src="../Assets/img/product-4.jpg" alt="" class="product-img">
+                        <span class="icon-sale">Sale</span>
+                        <h5 class="product-tlt">Soap cherry</h5>
+                        <span class="product-price sale">$68.00</span>
+                        <span class="product-price">$65.00 </span>
+                    </div>
+                    <div class="product grid__col-4">
+                        <img src="../Assets/img/product-3.jpg" alt="" class="product-img">
+                        <h5 class="product-tlt">Night cream</h5>
+                        <span class="product-price">$85.00 </span>
+                    </div>
+                    <div class="product grid__col-4">
+                        <img src="../Assets/img/product-2.jpg" alt="" class="product-img">
+                        <h5 class="product-tlt">Body lotion</h5>
+                        <span class="product-price">$64.00 </span>
+                    </div>
+                    <div class="product grid__col-4">
+                        <img src="../Assets/img/product-1.jpg" alt="" class="product-img">
+                        <span class="icon-sale">Sale</span>
+                        <h5 class="product-tlt">Body scrub</h5>
+                        <span class="product-price sale">$58.00</span>
+                        <span class="product-price">$50.00 </span>
+                    </div>
+                </div>
 
                 <div class="number">
                     <span class="number-page"><a href="#">1</a></span>
@@ -68,14 +141,14 @@
                 <a href="#id-1" class="posts grid__row">
                     <img src="../Assets/img/product-1.jpg" alt="" class="posts-img grid__col-4">
                     <div class="grid__col-8">
-                        <h5 class="posts-tlt">Skin care</h5>
+                        <h5 class="posts-tlt">Body scrub</h5>
                         <p class="posts-date">$17.50</p>
                     </div>
                 </a>
                 <a href="#id-2" class="posts grid__row">
                     <img src="../Assets/img/product-2.jpg" alt="" class="posts-img grid__col-4">
                     <div class="grid__col-8">
-                        <h5 class="posts-tlt">Face cream</h5>
+                        <h5 class="posts-tlt">Body lotion</h5>
                         <p class="posts-date">$49.00</p>
                     </div>
                 </a>
